src/cc/iqa/iQAParser.java
// $ANTLR 3.4 cc/iqa/iQAParser.g 2012-11-30 23:17:16

package cc.iqa;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class iQAParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AND", "BOM", "COLON", "COMMENTS", "COP", "DEDENT", "DIV", "ELIF", "ELSE", "EOP", "EQUAL", "Exponent", "FEATURE", "FEATURE_DEF", "FLOAT", "IDENTIFIER", "ID_START", "INDENT", "LPAREN", "MOD", "MUL", "NEWLINE", "NOT", "OR", "PIPE", "RPAREN", "SCENARIO", "SCENARIO_DEF", "SOP", "STAR", "STEP", "STRING", "SUB", "VARIABLE", "WHEN", "WHITE", "SCENARIO_LIST", "STEP_LIST", "STEP_TREE", "SUB_EXPR", "WHEN_TREE"
    };

    public static final int EOF=-1;
    public static final int ADD=4;
    public static final int AND=5;
    public static final int BOM=6;
    public static final int COLON=7;
    public static final int COMMENTS=8;
    public static final int COP=9;
    public static final int DEDENT=10;
    public static final int DIV=11;
    public static final int ELIF=12;
    public static final int ELSE=13;
    public static final int EOP=14;
    public static final int EQUAL=15;
    public static final int Exponent=16;
    public static final int FEATURE=17;
    public static final int FEATURE_DEF=18;
    public static final int FLOAT=19;
    public static final int IDENTIFIER=20;
    public static final int ID_START=21;
    public static final int INDENT=22;
    public static final int LPAREN=23;
    public static final int MOD=24;
    public static final int MUL=25;
    public static final int NEWLINE=26;
    public static final int NOT=27;
    public static final int OR=28;
    public static final int PIPE=29;
    public static final int RPAREN=30;
    public static final int SCENARIO=31;
    public static final int SCENARIO_DEF=32;
    public static final int SOP=33;
    public static final int STAR=34;
    public static final int STEP=35;
    public static final int STRING=36;
    public static final int SUB=37;
    public static final int VARIABLE=38;
    public static final int WHEN=39;
    public static final int WHITE=40;
    public static final int SCENARIO_LIST=41;
    public static final int STEP_LIST=42;
    public static final int STEP_TREE=43;
    public static final int SUB_EXPR=44;
    public static final int WHEN_TREE=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public iQAParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public iQAParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return iQAParser.tokenNames; }
    public String getGrammarFileName() { return "cc/iqa/iQAParser.g"; }


    private List<String> _errors = new ArrayList<String>();

    public String getErrorMessage(RecognitionException e,
                                  String[] tokenNames)
    {
        String error = super.getErrorMessage(e, tokenNames);

        if ( _errors != null && error != null ) {
            _errors.add(error);   
        }
     
        return error;
    }

    public List<String> getErrors() { 
        return _errors; 
    }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // cc/iqa/iQAParser.g:42:1: prog : ( BOM )? ( feature )+ -> ( feature )+ ;
    public final iQAParser.prog_return prog() throws RecognitionException {
        iQAParser.prog_return retval = new iQAParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token BOM1=null;
        iQAParser.feature_return feature2 =null;


        Object BOM1_tree=null;
        RewriteRuleTokenStream stream_BOM=new RewriteRuleTokenStream(adaptor,"token BOM");
        RewriteRuleSubtreeStream stream_feature=new RewriteRuleSubtreeStream(adaptor,"rule feature");
        try {
            // cc/iqa/iQAParser.g:43:5: ( ( BOM )? ( feature )+ -> ( feature )+ )
            // cc/iqa/iQAParser.g:43:7: ( BOM )? ( feature )+
            {
            // cc/iqa/iQAParser.g:43:7: ( BOM )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==BOM) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // cc/iqa/iQAParser.g:43:7: BOM
                    {
                    BOM1=(Token)match(input,BOM,FOLLOW_BOM_in_prog109);  
                    stream_BOM.add(BOM1);


                    }
                    break;

            }


            // cc/iqa/iQAParser.g:43:12: ( feature )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==FEATURE_DEF) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // cc/iqa/iQAParser.g:43:12: feature
            	    {
            	    pushFollow(FOLLOW_feature_in_prog112);
            	    feature2=feature();

            	    state._fsp--;

            	    stream_feature.add(feature2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            // AST REWRITE
            // elements: feature
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 44:9: -> ( feature )+
            {
                if ( !(stream_feature.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_feature.hasNext() ) {
                    adaptor.addChild(root_0, stream_feature.nextTree());

                }
                stream_feature.reset();

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class feature_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "feature"
    // cc/iqa/iQAParser.g:47:1: feature : FEATURE_DEF ( feature_content )? -> ^( FEATURE FEATURE_DEF ( feature_content )? ) ;
    public final iQAParser.feature_return feature() throws RecognitionException {
        iQAParser.feature_return retval = new iQAParser.feature_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token FEATURE_DEF3=null;
        iQAParser.feature_content_return feature_content4 =null;


        Object FEATURE_DEF3_tree=null;
        RewriteRuleTokenStream stream_FEATURE_DEF=new RewriteRuleTokenStream(adaptor,"token FEATURE_DEF");
        RewriteRuleSubtreeStream stream_feature_content=new RewriteRuleSubtreeStream(adaptor,"rule feature_content");
        try {
            // cc/iqa/iQAParser.g:48:5: ( FEATURE_DEF ( feature_content )? -> ^( FEATURE FEATURE_DEF ( feature_content )? ) )
            // cc/iqa/iQAParser.g:48:7: FEATURE_DEF ( feature_content )?
            {
            FEATURE_DEF3=(Token)match(input,FEATURE_DEF,FOLLOW_FEATURE_DEF_in_feature144);  
            stream_FEATURE_DEF.add(FEATURE_DEF3);


            // cc/iqa/iQAParser.g:48:19: ( feature_content )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INDENT) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // cc/iqa/iQAParser.g:48:19: feature_content
                    {
                    pushFollow(FOLLOW_feature_content_in_feature146);
                    feature_content4=feature_content();

                    state._fsp--;

                    stream_feature_content.add(feature_content4.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: FEATURE_DEF, feature_content
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 48:36: -> ^( FEATURE FEATURE_DEF ( feature_content )? )
            {
                // cc/iqa/iQAParser.g:48:39: ^( FEATURE FEATURE_DEF ( feature_content )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(FEATURE, "FEATURE")
                , root_1);

                adaptor.addChild(root_1, 
                stream_FEATURE_DEF.nextNode()
                );

                // cc/iqa/iQAParser.g:48:61: ( feature_content )?
                if ( stream_feature_content.hasNext() ) {
                    adaptor.addChild(root_1, stream_feature_content.nextTree());

                }
                stream_feature_content.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "feature"


    public static class feature_content_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "feature_content"
    // cc/iqa/iQAParser.g:51:1: feature_content : INDENT ( scenario )+ ( DEDENT | EOF ) -> ^( SCENARIO_LIST ( scenario )+ ) ;
    public final iQAParser.feature_content_return feature_content() throws RecognitionException {
        iQAParser.feature_content_return retval = new iQAParser.feature_content_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INDENT5=null;
        Token DEDENT7=null;
        Token EOF8=null;
        iQAParser.scenario_return scenario6 =null;


        Object INDENT5_tree=null;
        Object DEDENT7_tree=null;
        Object EOF8_tree=null;
        RewriteRuleTokenStream stream_DEDENT=new RewriteRuleTokenStream(adaptor,"token DEDENT");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_INDENT=new RewriteRuleTokenStream(adaptor,"token INDENT");
        RewriteRuleSubtreeStream stream_scenario=new RewriteRuleSubtreeStream(adaptor,"rule scenario");
        try {
            // cc/iqa/iQAParser.g:52:5: ( INDENT ( scenario )+ ( DEDENT | EOF ) -> ^( SCENARIO_LIST ( scenario )+ ) )
            // cc/iqa/iQAParser.g:52:7: INDENT ( scenario )+ ( DEDENT | EOF )
            {
            INDENT5=(Token)match(input,INDENT,FOLLOW_INDENT_in_feature_content175);  
            stream_INDENT.add(INDENT5);


            // cc/iqa/iQAParser.g:52:14: ( scenario )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==SCENARIO_DEF) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // cc/iqa/iQAParser.g:52:14: scenario
            	    {
            	    pushFollow(FOLLOW_scenario_in_feature_content177);
            	    scenario6=scenario();

            	    state._fsp--;

            	    stream_scenario.add(scenario6.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            // cc/iqa/iQAParser.g:52:24: ( DEDENT | EOF )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==DEDENT) ) {
                alt5=1;
            }
            else if ( (LA5_0==EOF) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // cc/iqa/iQAParser.g:52:25: DEDENT
                    {
                    DEDENT7=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_feature_content181);  
                    stream_DEDENT.add(DEDENT7);


                    }
                    break;
                case 2 :
                    // cc/iqa/iQAParser.g:52:34: EOF
                    {
                    EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_feature_content185);  
                    stream_EOF.add(EOF8);


                    }
                    break;

            }


            // AST REWRITE
            // elements: scenario
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 53:9: -> ^( SCENARIO_LIST ( scenario )+ )
            {
                // cc/iqa/iQAParser.g:53:12: ^( SCENARIO_LIST ( scenario )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(SCENARIO_LIST, "SCENARIO_LIST")
                , root_1);

                if ( !(stream_scenario.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_scenario.hasNext() ) {
                    adaptor.addChild(root_1, stream_scenario.nextTree());

                }
                stream_scenario.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "feature_content"


    public static class scenario_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "scenario"
    // cc/iqa/iQAParser.g:56:1: scenario : SCENARIO_DEF ( suite )* -> ^( SCENARIO SCENARIO_DEF ( suite )* ) ;
    public final iQAParser.scenario_return scenario() throws RecognitionException {
        iQAParser.scenario_return retval = new iQAParser.scenario_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SCENARIO_DEF9=null;
        iQAParser.suite_return suite10 =null;


        Object SCENARIO_DEF9_tree=null;
        RewriteRuleTokenStream stream_SCENARIO_DEF=new RewriteRuleTokenStream(adaptor,"token SCENARIO_DEF");
        RewriteRuleSubtreeStream stream_suite=new RewriteRuleSubtreeStream(adaptor,"rule suite");
        try {
            // cc/iqa/iQAParser.g:57:5: ( SCENARIO_DEF ( suite )* -> ^( SCENARIO SCENARIO_DEF ( suite )* ) )
            // cc/iqa/iQAParser.g:57:7: SCENARIO_DEF ( suite )*
            {
            SCENARIO_DEF9=(Token)match(input,SCENARIO_DEF,FOLLOW_SCENARIO_DEF_in_scenario220);  
            stream_SCENARIO_DEF.add(SCENARIO_DEF9);


            // cc/iqa/iQAParser.g:57:20: ( suite )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==INDENT) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // cc/iqa/iQAParser.g:57:21: suite
            	    {
            	    pushFollow(FOLLOW_suite_in_scenario223);
            	    suite10=suite();

            	    state._fsp--;

            	    stream_suite.add(suite10.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            // AST REWRITE
            // elements: SCENARIO_DEF, suite
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 57:29: -> ^( SCENARIO SCENARIO_DEF ( suite )* )
            {
                // cc/iqa/iQAParser.g:57:32: ^( SCENARIO SCENARIO_DEF ( suite )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(SCENARIO, "SCENARIO")
                , root_1);

                adaptor.addChild(root_1, 
                stream_SCENARIO_DEF.nextNode()
                );

                // cc/iqa/iQAParser.g:57:56: ( suite )*
                while ( stream_suite.hasNext() ) {
                    adaptor.addChild(root_1, stream_suite.nextTree());

                }
                stream_suite.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "scenario"


    public static class suite_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "suite"
    // cc/iqa/iQAParser.g:60:1: suite : INDENT ( compound_stmt )+ ( DEDENT | EOF ) -> ^( STEP_LIST ( compound_stmt )+ ) ;
    public final iQAParser.suite_return suite() throws RecognitionException {
        iQAParser.suite_return retval = new iQAParser.suite_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INDENT11=null;
        Token DEDENT13=null;
        Token EOF14=null;
        iQAParser.compound_stmt_return compound_stmt12 =null;


        Object INDENT11_tree=null;
        Object DEDENT13_tree=null;
        Object EOF14_tree=null;
        RewriteRuleTokenStream stream_DEDENT=new RewriteRuleTokenStream(adaptor,"token DEDENT");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_INDENT=new RewriteRuleTokenStream(adaptor,"token INDENT");
        RewriteRuleSubtreeStream stream_compound_stmt=new RewriteRuleSubtreeStream(adaptor,"rule compound_stmt");
        try {
            // cc/iqa/iQAParser.g:61:5: ( INDENT ( compound_stmt )+ ( DEDENT | EOF ) -> ^( STEP_LIST ( compound_stmt )+ ) )
            // cc/iqa/iQAParser.g:61:7: INDENT ( compound_stmt )+ ( DEDENT | EOF )
            {
            INDENT11=(Token)match(input,INDENT,FOLLOW_INDENT_in_suite253);  
            stream_INDENT.add(INDENT11);


            // cc/iqa/iQAParser.g:61:14: ( compound_stmt )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==STEP||(LA7_0 >= VARIABLE && LA7_0 <= WHEN)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // cc/iqa/iQAParser.g:61:15: compound_stmt
            	    {
            	    pushFollow(FOLLOW_compound_stmt_in_suite256);
            	    compound_stmt12=compound_stmt();

            	    state._fsp--;

            	    stream_compound_stmt.add(compound_stmt12.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            // cc/iqa/iQAParser.g:61:31: ( DEDENT | EOF )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==DEDENT) ) {
                alt8=1;
            }
            else if ( (LA8_0==EOF) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }
            switch (alt8) {
                case 1 :
                    // cc/iqa/iQAParser.g:61:32: DEDENT
                    {
                    DEDENT13=(Token)match(input,DEDENT,FOLLOW_DEDENT_in_suite261);  
                    stream_DEDENT.add(DEDENT13);


                    }
                    break;
                case 2 :
                    // cc/iqa/iQAParser.g:61:41: EOF
                    {
                    EOF14=(Token)match(input,EOF,FOLLOW_EOF_in_suite265);  
                    stream_EOF.add(EOF14);


                    }
                    break;

            }


            // AST REWRITE
            // elements: compound_stmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 61:46: -> ^( STEP_LIST ( compound_stmt )+ )
            {
                // cc/iqa/iQAParser.g:61:49: ^( STEP_LIST ( compound_stmt )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(STEP_LIST, "STEP_LIST")
                , root_1);

                if ( !(stream_compound_stmt.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_compound_stmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_compound_stmt.nextTree());

                }
                stream_compound_stmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "suite"


    public static class step_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "step"
    // cc/iqa/iQAParser.g:64:1: step : STEP ( table )? -> ^( STEP_TREE STEP ( table )? ) ;
    public final iQAParser.step_return step() throws RecognitionException {
        iQAParser.step_return retval = new iQAParser.step_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token STEP15=null;
        iQAParser.table_return table16 =null;


        Object STEP15_tree=null;
        RewriteRuleTokenStream stream_STEP=new RewriteRuleTokenStream(adaptor,"token STEP");
        RewriteRuleSubtreeStream stream_table=new RewriteRuleSubtreeStream(adaptor,"rule table");
        try {
            // cc/iqa/iQAParser.g:65:5: ( STEP ( table )? -> ^( STEP_TREE STEP ( table )? ) )
            // cc/iqa/iQAParser.g:65:7: STEP ( table )?
            {
            STEP15=(Token)match(input,STEP,FOLLOW_STEP_in_step292);  
            stream_STEP.add(STEP15);


            // cc/iqa/iQAParser.g:65:12: ( table )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==PIPE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // cc/iqa/iQAParser.g:65:13: table
                    {
                    pushFollow(FOLLOW_table_in_step295);
                    table16=table();

                    state._fsp--;

                    stream_table.add(table16.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: table, STEP
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 65:21: -> ^( STEP_TREE STEP ( table )? )
            {
                // cc/iqa/iQAParser.g:65:24: ^( STEP_TREE STEP ( table )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(STEP_TREE, "STEP_TREE")
                , root_1);

                adaptor.addChild(root_1, 
                stream_STEP.nextNode()
                );

                // cc/iqa/iQAParser.g:65:41: ( table )?
                if ( stream_table.hasNext() ) {
                    adaptor.addChild(root_1, stream_table.nextTree());

                }
                stream_table.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "step"


    public static class cell_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "cell"
    // cc/iqa/iQAParser.g:68:1: cell : expression PIPE ;
    public final iQAParser.cell_return cell() throws RecognitionException {
        iQAParser.cell_return retval = new iQAParser.cell_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PIPE18=null;
        iQAParser.expression_return expression17 =null;


        Object PIPE18_tree=null;

        try {
            // cc/iqa/iQAParser.g:69:5: ( expression PIPE )
            // cc/iqa/iQAParser.g:69:7: expression PIPE
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_expression_in_cell325);
            expression17=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression17.getTree());

            PIPE18=(Token)match(input,PIPE,FOLLOW_PIPE_in_cell327); 
            PIPE18_tree = 
            (Object)adaptor.create(PIPE18)
            ;
            adaptor.addChild(root_0, PIPE18_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "cell"


    public static class row_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "row"
    // cc/iqa/iQAParser.g:72:1: row : PIPE ( cell )+ ;
    public final iQAParser.row_return row() throws RecognitionException {
        iQAParser.row_return retval = new iQAParser.row_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PIPE19=null;
        iQAParser.cell_return cell20 =null;


        Object PIPE19_tree=null;

        try {
            // cc/iqa/iQAParser.g:73:5: ( PIPE ( cell )+ )
            // cc/iqa/iQAParser.g:73:7: PIPE ( cell )+
            {
            root_0 = (Object)adaptor.nil();


            PIPE19=(Token)match(input,PIPE,FOLLOW_PIPE_in_row344); 
            PIPE19_tree = 
            (Object)adaptor.create(PIPE19)
            ;
            adaptor.addChild(root_0, PIPE19_tree);


            // cc/iqa/iQAParser.g:73:12: ( cell )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==VARIABLE) ) {
                    int LA10_2 = input.LA(2);

                    if ( ((LA10_2 >= ADD && LA10_2 <= AND)||LA10_2==COP||LA10_2==DIV||LA10_2==EOP||(LA10_2 >= MOD && LA10_2 <= MUL)||(LA10_2 >= OR && LA10_2 <= PIPE)||LA10_2==SOP||LA10_2==SUB) ) {
                        alt10=1;
                    }


                }
                else if ( ((LA10_0 >= FLOAT && LA10_0 <= IDENTIFIER)||LA10_0==LPAREN||LA10_0==NOT||LA10_0==STRING) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // cc/iqa/iQAParser.g:73:12: cell
            	    {
            	    pushFollow(FOLLOW_cell_in_row346);
            	    cell20=cell();

            	    state._fsp--;

            	    adaptor.addChild(root_0, cell20.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
